# GraphRAG

./: .env.example  .gitignore  GraphDatabaseAndRAG.ipynb  IntroductionToGraphDB.ipynb  IntroductionToGraphDB.md  README.md  config.py  data_loader.py  docker-compose.yml  modified_neo4j_graph.py  pyproject.toml
